--- a/maquette/style.css
+++ b/maquette/style.css
@@ -2,12 +2,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 /*==================== STYLE ========================*/
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Poppins', sans-serif;
 }
 
 section {
   padding: 1rem;
+}
+
+.header {
+  background-color: #1098f7;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 
 .header__nav {
@@ -20,6 +29,7 @@ section {
 
 .header__title {
   font-size: 2rem;
+  color: white;
 }
 
 .section1 {
@@ -38,17 +48,90 @@ section {
   flex-direction: column;
 }
 
-.section2__title {
+.section__title {
+  text-align: center;
+  font-size: 1.5rem;
+  background-color: #69bcf6;
+  color: white;
+  padding: 1rem;
+  border-radius: 1rem;
+  margin-bottom: 1rem;
+}
+
+.section3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.section3__title {
   text-align: center;
   font-size: 1.5rem;
 }
 
-.section2__card {
+.quiz__card {
+  background-color: white;
+  border-radius: 1rem;
+  overflow: hidden;
+  box-shadow: 0 0.1rem 1rem rgba(0, 0, 0, 0.1);
+  margin-bottom: 1rem;
+  transition: 0.2s ease-in-out;
+}
+
+.quiz__card:hover {
+  transform: scale(1.01);
+}
+
+.card-header__img {
+  max-width: 100%;
+  display: block;
+  object-fit: cover;
+}
+
+.card__title {
+  text-align: center;
+  font-size: 1.5rem;
+  padding-top: 0.5rem;
+}
+
+.card-body {
+  padding: 0 0.5rem;
+}
+
+.card-body__tag {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  background-color: red;
-  border-radius: 15px 15px 0;
-  height: 20vh;
-  width: 80vw;
+  padding: 1rem 0;
+}
+
+.card-body__categorie {
+  background: linear-gradient(to bottom, #ef473a, #cb2d3e);
+  color: white;
+  border-radius: 1rem;
+  padding: 0.5rem;
+}
+
+.card-body__difficulty {
+  background: linear-gradient(to bottom, #2f80ed, #56ccf2);
+  color: white;
+  border-radius: 1rem;
+  padding: 0.5rem;
+}
+
+.card-body__tag2 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.card-body__autor {
+  display: flex;
+  align-items: center;
+}
+
+.footer {
+  background-color: #1098f7;
+  padding: 1rem;
 }
