--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -1,1 +1,74 @@
+@use '../../styles/mixin';
+@use '../../styles/vars';
 
+/*==================== FOOTER ========================*/
+
+.footer {
+    background-color: vars.$main-primary-color;
+    width: 100vw;
+    color: white; 
+
+/*     margin: 1rem 1.5rem 0 1.5rem; */
+  }
+  
+  .footer__contact {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 1rem
+  }
+  .footer__contact-logo {
+  
+  }
+  .footer__contact-mail {
+    display: flex;
+    flex-flow: row;
+    align-items: center
+  
+  }
+  
+  
+  
+  /* FOOTER DARK: SITEMAP + MENTIONS */
+  .footer-dark {
+    background-color: vars.$primary-dark-color;
+    padding: 1rem 1rem 0.5rem 1rem;
+    font-size: 0.7rem;
+    text-align: center;
+  }
+  
+  .footer-dark__site-map{
+    font-size: 1rem;
+    padding-top: 0.5rem;
+    display: flex;
+    flex-flow: column;
+    justify-content: center
+  }
+  
+  .site-map__nav-list {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    padding: 0.5rem;
+    width: 100vw;
+
+    @include mixin.breakpoint(desktop) {     
+      flex-flow: row wrap;
+      justify-content: center; 
+    }
+  }
+  
+  .site-map__nav-list li {
+    width: 8rem;
+    padding-right: 0.3rem;
+    padding-bottom: 0.5rem;;
+  
+  }
+  
+  .footer-dark__mentions a::after{
+    content: " | ";
+    margin: 0 2px;
+  }
+  .footer-dark__mentions-copyright {
+  padding-top: 0.5rem;
+  }
