--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -1,1 +1,51 @@
+@use '../../styles/mixin';
+@use '../../styles/vars';
+/*==================== FOOTER ========================*/
+
+.header {
+  background-color: vars.$main-primary-color;
+  color: #fff;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  padding: 1rem;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  height: 4rem;
+
+
+
+
+  &__content {
+
+
+    &__logo{
+
+    }
+
+    &__nav{
+
+
+
+
+      @include mixin.breakpoint(mobile) {
+     
+      }
+
+      &-list{
+        height: 100vh;
+        flex-direction: column;
+        height: auto;
+    
+
+      }
+
+
+    }
+
+  }
+}
+
+
+
+
 
