--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,10 +10,10 @@
   
   body {
     font-family: 'Poppins', sans-serif;
-    display: flex;
+/*     display: flex;
     flex-flow: column;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     overflow-x: hidden;
   }
   
