--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -1,6 +1,8 @@
 @use '../../styles/mixin';
 @use '../../styles/vars';
-/*==================== FOOTER ========================*/
+
+
+/*==================== HEADER ========================*/
 
 .header {
   background-color: vars.$main-primary-color;
@@ -11,16 +13,23 @@
   position: fixed;
   top: 0;
 
+  &__logo{
+  height: 4rem;
+  z-index: 100;
+  position: fixed;
+  top: 1.25rem;
+  left: 10px;
+  font-size: 1.5rem;
+  color:#fff;
+  }
 
+/*==================== NAVBAR ========================*/
   &__nav{
     position: fixed;
     width: 100%;
     height: 4rem;
 
-
-
     &-list {
-      z-index: auto;
       display: flex;
       flex-direction: column;
       height: auto;
@@ -28,7 +37,6 @@
 
       @include mixin.breakpoint(desktop) {
         height: 100%;
-        display: flex;
         flex-direction: row;
         justify-content: center;
         align-items: center;   
@@ -37,7 +45,6 @@
       &__items {
         font-size: 1.25rem;
         text-transform: uppercase;
-        cursor: pointer;
         width: 100%;
         border-top: 1px solid rgba(255, 255, 255, 0.555);
         text-align: center;
@@ -45,16 +52,15 @@
         padding: 20px 0;  
 
         @include mixin.breakpoint(desktop) {
+          width: auto;
+          padding: 10px;  
           margin-right: 1.25rem;
           border-top:none;
-          width: auto;
+          border-radius: 12px;
         }
       }
 
-      &__items a{
-        color: #f1f1f1;  
-      }
-
+      // Liste 1er élément <li>
       &__items:nth-child(1){
         margin-top: 4rem;
 
@@ -68,6 +74,8 @@
       }
     }
 
+  /*==================== BOUTON TOOGLE: menu hamburger ========================*/
+  // ICON du menu change avec le state toggleMenu
     &__toggle{
       display: block;
       position: absolute;
@@ -81,11 +89,35 @@
       @include mixin.breakpoint(desktop) {
         display: none;
       }
-    }    
+    }   
   }
 
-  
+   /*==================== BOUTON LOGIN ========================*/
+  &__login {
+    display: block;
+    position: absolute;
+    top: 0.9rem;
+    right: 80px;
+    outline: none;	
+    border: none;
+    border-radius: 8px;
+    background-color: #003051;;
+    color: #fff;
+    z-index: 100;
+    padding: 5px 5px 1px 5px;
+  }
+  &__login:hover {
+    background-color: #fc9100;
+  }
+
+
+   /*==================== HEADER LINK ========================*/
+  a {
+    color: #fff;
+  }  
 }
+
+
 
 
 
