--- a/src/pages/Login/styles.scss
+++ b/src/pages/Login/styles.scss
@@ -1,3 +1,6 @@
+@use '../../styles/mixin';
+@use '../../styles/vars';
+
 .login{
 
     .login-form {
@@ -6,7 +9,6 @@
 
         }
         .__button {
-
             margin-top: 50px;
             width: 100%;
             background-color: vars.$main-primary-color;
