Header works with redux's store + create Profil page component

--- a/src/pages/Login/styles.scss
+++ b/src/pages/Login/styles.scss
@@ -1,8 +1,8 @@
 @use '../../styles/mixin';
 @use '../../styles/vars';
 
-.login{
-		padding: 4rem 1rem;    
+.login-form{
+		padding-top: 5rem;
 		.login-form {
 
 		.__field__container{
