Create new page for creation quiz + add form for create quiz

--- a/src/pages/Profil/styles.scss
+++ b/src/pages/Profil/styles.scss
@@ -9,7 +9,19 @@
 
   &__update {
     font-family: 'Poppins', sans-serif;
-    outline: none;	
+    outline: none;
+    border: none;
+    border-radius: 8px;
+    background-color: vars.$main-primary-color;
+    color: #fff;
+    padding: 0.7rem;
+    margin-top: 1rem;
+    cursor: pointer;
+  }
+
+  &__quiz {
+    font-family: 'Poppins', sans-serif;
+    outline: none;
     border: none;
     border-radius: 8px;
     background-color: vars.$main-primary-color;
@@ -21,7 +33,7 @@
 
   &__delete {
     font-family: 'Poppins', sans-serif;
-    outline: none;	
+    outline: none;
     border: none;
     border-radius: 8px;
     background-color: red;
