--- a/src/pages/Login/styles.scss
+++ b/src/pages/Login/styles.scss
@@ -14,7 +14,7 @@
     border-radius: 12px;
   }
 
-  &__logged {
+  &__isLogged {
     display: flex;
     justify-content: center;
     align-items: center;
