--- a/src/pages/Register/styles.scss
+++ b/src/pages/Register/styles.scss
@@ -13,7 +13,7 @@
     border-radius: 12px;
   }
 
-  &__logged {
+  &__isLogged {
     display: flex;
     justify-content: center;
     align-items: center;
