CreateQuestion is working for the test + handleSubmit create

--- a/src/pages/Create-Quiz/styles.scss
+++ b/src/pages/Create-Quiz/styles.scss
@@ -65,3 +65,12 @@
 .question__number {
   margin-top: 2rem;
 }
+
+
+.error-message {
+  padding: 0.5rem;
+  margin: 0.5rem 0;
+  color: white;
+  background: rgba(203, 24, 24, 0.757);
+  border-radius: 5px;
+}
