add user's quiz list in profile: filter on quizList state

--- a/src/pages/Profil-Quiz/styles.scss
+++ b/src/pages/Profil-Quiz/styles.scss
@@ -1,2 +1,13 @@
 @use '../../styles/mixin';
 @use '../../styles/vars';
+
+.quiz__title {
+  text-align: center;
+  font-size: 1.5rem;
+}
+
+.quiz__subtitle {
+  text-align: center;
+  font-size: 1.25rem;
+  padding-top: 2rem;
+}
