--- a/src/pages/QuizUpdate/styles.scss
+++ b/src/pages/QuizUpdate/styles.scss
@@ -29,6 +29,7 @@
   display: flex;
   align-items: center;
   white-space: nowrap;
+  flex-direction: column;
 }
 .quiz__button {
   font-family: 'Poppins', sans-serif;
@@ -64,7 +65,6 @@
 .question__number {
   margin-top: 2rem;
 }
-
 
 .error-message {
   padding: 0.5rem;
