--- a/src/pages/ProfilQuiz/styles.scss
+++ b/src/pages/ProfilQuiz/styles.scss
@@ -15,17 +15,21 @@
 .card-wrapper{
   position:relative;
   max-width: 300px;
-  margin: 1rem auto;
+  margin: 4rem auto;
 }
 
 .card-buttons {
-/*   display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 2rem;
-  margin-bottom: 2rem; */
   position: absolute;
-  top: 0px;
-  right: 100px;
+  top: -2.2rem;
+
   z-index: 1;
+
+  &__delete{
+    right: 0px;
+
+  }
+  &__edit{
+    left: 40px;
+
+  }
 }
