--- a/src/pages/QuizGame/styles.scss
+++ b/src/pages/QuizGame/styles.scss
@@ -1,30 +1,52 @@
 @use '../../styles/mixin';
 @use '../../styles/vars';
 
-.quiz-container {
-  text-align: center;
+.quizgame__container {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+
+  &-title{
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    font-weight: 500;
+    padding-top: 1rem;
+    margin-bottom: 1rem;
+    color: vars.$primary-dark-color;
+    text-align: center;
+  }
+}
+// SCORE PENDANT LE QUIZ
+.quizgame__score{
+  font-size: 1.3rem;
+  text-transform: uppercase;
+  font-weight: 500;
+  color: vars.$main-third-color;
+  margin-top: 1rem;
+  display: inline;
+
 }
 
-.quiz-title {
-  text-align: center;
+// QUESTIONS
+.quizgame__question{
+    margin-bottom: 1rem;
+    &-info{
+      width: 100%;
+      text-align: left;
+    }
+  &-Nb{
+    color: vars.$primary-dark-color;
+    font-size: 1.3rem;
+    font-weight: 500;
+  }
+  &-text{
+    font-size: 1.2rem;
+    margin-top: 0.5rem;
+  }
 }
 
-.quiz-score {
-
-}
-
-.quizgame__questionNb {
-
-}
-
-.quizgame__text {
-
-}
-
-.quizgame__answer {
-
-
-}
+// BOUTONS DE REPONSES DU QUIZ
 .quizgame__answerBtn{
   outline: 0;
   border: 0;
@@ -35,19 +57,78 @@
   width: 100%;
   color: #fff;
   font-size: 1rem;
+  font-weight: 500;
   text-transform: uppercase;
   cursor: pointer;
-  &:hover {
-    background: vars.$main-secondary-color;
+  transition: background 0.3s ease;
+  &:hover{
+  background: vars.$primary-dark-color;
+  color: #fff;
+  }
+  // désactive les boutons après le click de l'utilisateur
+  &:disabled{
+    pointer-events: none;
+  }
+}
+
+//  Classes ajoutées après le click de l'utilisateur
+// réponse de l'utilisateur
+.selectedBtn{
+border-color: vars.$secondary-light-color;
+box-shadow: 0 0 10px 0 vars.$secondary-light-color inset, 0 0 10px 4px vars.$secondary-light-color;
+}
+// la réponse à la question (sélectionée ou non par l'utilisateur)
+.valid{
+  background-color: vars.$valid-answer-color;
+  border: none;
+}
+// mauvaise réponse de l'utilisateur
+.invalid{
+  background-color: vars.$wrong-answer-color;
+
+}
+
+// FIN DU QUIZ
+.quizgame__end{
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  &-text{
+    margin-top: 1rem; 
+    font-weight: 500;
+    font-size: 1.3rem;
+    color: vars.$main-primary-color;
+  }
+  &-score{
+    display: inline;
+    margin-top: 0.5rem;  
+    &-Nb{
+      font-size: 1.3rem;
+      text-transform: uppercase;
+      font-weight: 500;
+      color: vars.$main-third-color;
+      display: inline;
+    }
+  }
+  &-img{
+    width: 80%;
+    max-width: 800px;
+    height: 200px;
+    margin: 1rem auto;
   }
 
 }
 
-.valid{
-  background-color: vars.$valid-answer-color;
-  color: white;
+// BOUTON DE REDIRECTION
+.quizgame__redirectionBtn{
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  margin:1rem ;
+
 }
-.invalid{
-  background-color: vars.$wrong-answer-color;
-  color: white;
-}
+
+
+
+
