--- a/src/components/Card/styles.scss
+++ b/src/components/Card/styles.scss
@@ -9,7 +9,8 @@
   flex-direction: column;
   overflow: hidden;
   background-color: white;
-  max-width: 300px;
+  width: 300px;
+  height: 420px;  
   margin: 1rem auto;
   border-radius: 1rem;
   box-shadow: 0 0.1rem 1rem rgba(0, 0, 0, 0.3);
@@ -22,18 +23,21 @@
 }
 
 .card-header__img {
-  max-width: 100%;
   display: block;
+  width: 100%;
+  height: 220px;
   object-fit: cover;
 }
 
 .card-body {
   padding: 0 0.5rem;
+  height:200px;
 
   &__title {
     text-align: center;
     font-size: 1.5rem;
     padding: 1rem 0;
+    height: 75px;
   }
 
   &__tag {
