--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -124,7 +124,7 @@
     border: none;
     background-color: #003051;
     border-radius: 20px;
-    padding: 10px;
+    padding: 8px 10px;
     font-family: 'Poppins', sans-serif;
     font-size: 1rem;
     text-transform: uppercase;
