--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -124,7 +124,7 @@
     border: none;
     background-color: #003051;
     border-radius: 20px;
-    padding: 8px 10px;
+    padding: 12px 10px;
     font-family: 'Poppins', sans-serif;
     font-size: 1rem;
     text-transform: uppercase;
@@ -135,7 +135,8 @@
 
     &-icon{
       display: flex;
-      flex-direction: row;  
+      flex-direction: row;
+      align-items: center;  
     }
     
     &-pseudo{
@@ -143,6 +144,7 @@
       @include mixin.breakpoint(desktop) {
         display: block;
         margin-left: 5px;
+        text-transform:none;
       }
     }
   
