--- a/src/pages/ProfilQuiz/styles.scss
+++ b/src/pages/ProfilQuiz/styles.scss
@@ -1,35 +1,57 @@
 @use '../../styles/mixin';
 @use '../../styles/vars';
 
+
+.quiz__management{
+
+}
+
+
+
+
 .quiz__title {
-  text-align: center;
   font-size: 1.5rem;
+  font-weight: 500;
+  padding-top: 1rem;
+  margin-bottom: 1rem;
+  color: vars.$primary-dark-color;
+  text-align: center;
 }
 
 .quiz__subtitle {
   text-align: center;
-  font-size: 1.25rem;
-  padding-top: 2rem;
+  font-size: 1.5rem;
+  padding: 1.5rem;
+  color: vars.$main-primary-color;
+  text-align: center;
+  font-weight: 500;
+}
+.quiz__content-list{
+  display: flex;
+  flex-direction: column; 
+  justify-content: center;
+  align-items: center;
+
+  @include mixin.breakpoint(desktop) {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
 }
 
 .card-wrapper{
   position:relative;
-  max-width: 300px;
-  margin: 4rem auto;
+  width: 330px;
+  height: 530px;
+  margin: 1rem auto;
+  background-color: rgba(13, 114, 218, 0.2);
+  border-radius: 8px;
 }
 
 .card-buttons {
-  position: absolute;
-  top: -2.2rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
 
-  z-index: 1;
-
-  &__delete{
-    right: 0px;
-
-  }
-  &__edit{
-    left: 40px;
-
-  }
 }
