--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,4 +1,4 @@
-$main-primary-color: #0d72da;
+$main-primary-color: rgb(13, 114, 218);
 $primary-dark-color: #003051;
 $primary-light-color: #3f7caf;
 
@@ -13,4 +13,3 @@ $wrong-answer-color: #eb3c33;
 
 
 $darkcolor: #213547;
-$darkcolor2:#32292F
