Profil-Settings: add labels to input forms

--- a/src/pages/Profil-Settings/styles.scss
+++ b/src/pages/Profil-Settings/styles.scss
@@ -81,3 +81,12 @@
   border-radius: 0.7rem;
 }
 
+.label__profil {
+  text-align: left;
+  padding-bottom: 0.2rem;
+  padding-left: 0.5rem;
+  padding-top: 0.75rem;
+  width: 100%;
+  display: block;
+  color: vars.$main-primary-color;
+}
