--- a/src/pages/Login/styles.scss
+++ b/src/pages/Login/styles.scss
@@ -3,7 +3,7 @@
 
 .login-page {
   padding: 7%;
-  margin: 2rem auto auto;
+  margin: 2rem auto 2rem auto;
 
   &__wrapper {
     max-width: 22.5rem;
