--- a/src/pages/Profil/styles.scss
+++ b/src/pages/Profil/styles.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   justify-content: start;
   align-items: center;
-  height: 100%;
+  height: 70vh;
 
   &__title{
     font-size: 1.5rem;
@@ -28,9 +28,7 @@
 
     @include mixin.breakpoint(desktop) {
       width: 80%;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
+
     }
   }
 
@@ -83,20 +81,18 @@
     font-weight: inherit;
     line-height: inherit;
     padding: 0;
-
     font-family: 'Poppins', sans-serif;
     font-size: 0.9rem;
     font-weight: 500;
     width: 12rem;
     height: 3rem;
     margin-top: 1rem;
-    padding: 0.7rem;
     border-radius: 8px;
     cursor: pointer;
     transition: 0.5s;   
 
     &__logout{ 
-      background-color: vars.$main-third-color;
+      background-color: vars.$main-primary-color;
       color: #fff;
     }
     &__delete {
@@ -114,5 +110,6 @@
   color: #fff
 }
 
-
-
+.profil__button__delete {
+  margin-top: 5rem;
+}
