--- a/src/pages/QuizList/styles.scss
+++ b/src/pages/QuizList/styles.scss
@@ -2,7 +2,6 @@
 @use '../../styles/vars';
 
 .quiz-list {
-  padding: 1rem 2rem;
 
   &__title {
     font-size: 1.5rem;
@@ -27,5 +26,39 @@
       gap: 2rem;
     }
   }
+  &__container {
+    background-color: vars.$primary-dark-color;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem 0;
+    text-align: center;
+  }
+  &__filter {
+    padding-bottom: 2rem;
+  }
+  &__text {
+    padding-bottom: 1rem;
+    text-decoration: underline;
+    text-transform: uppercase;
+  }
 
+}
+
+.filter__search-input {
+  padding: 1rem;
+  border: none;
+  border-top-left-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+}
+
+.filter__search-btn {
+  padding: 1rem;
+  border: none;
+  background-color: vars.$main-primary-color;
+  color: white;
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;
 }
