--- a/src/components/Card/styles.scss
+++ b/src/components/Card/styles.scss
@@ -56,6 +56,7 @@
     color: white;
     border-radius: 1rem;
     padding: 0.5rem;
+      text-transform: capitalize;
   }
 
   &__difficulty {
@@ -67,6 +68,7 @@
     color: white;
     border-radius: 1rem;
     padding: 0.5rem;
+    text-transform: capitalize;
   }
 
   &__tag2 {
@@ -86,3 +88,5 @@
     border: none;
   }
 }
+
+
