--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -77,17 +77,13 @@
         width: auto;
         padding: 7px;  
         border-radius: 3px;
-        transition: 0.5s;
+        transition: ease-in-out 0.3s;
         &--active{
-          background: rgba(255,255,255,0.15);
-          backdrop-filter: blur(30px);
-          box-shadow: 0 5px 5px rgba(0,0,0,0.2);  
-          transition: 0.5s;        
+          text-decoration: underline;       
         }
       }
       &__items-link:hover{
-        background: rgba(255, 255, 255, 0.3);
-        transition: 0.5s;
+        text-decoration: underline;
       }
 
       
@@ -123,7 +119,7 @@
     outline: none;	
     border: none;
     background-color: #003051;
-    border-radius: 20px;
+    border-radius: 1rem;
     padding: 12px 10px;
     font-family: 'Poppins', sans-serif;
     font-size: 1rem;
