--- a/src/pages/QuizList/styles.scss
+++ b/src/pages/QuizList/styles.scss
@@ -41,6 +41,7 @@
   }
   &__text {
     padding-bottom: 1rem;
+    font-size: 1.25rem;
     text-decoration: underline;
     text-transform: uppercase;
   }
@@ -52,13 +53,89 @@
   border: none;
   border-top-left-radius: 1rem;
   border-bottom-left-radius: 1rem;
+  font-family: 'Poppins', sans-serif;
 }
 
 .filter__search-btn {
-  padding: 1rem;
+  padding:1rem;
   border: none;
   background-color: vars.$main-primary-color;
   color: white;
   border-top-right-radius: 1rem;
   border-bottom-right-radius: 1rem;
+  cursor: pointer;
+}
+
+.filter__search-btn:hover{
+  background-color: vars.$main-secondary-color;
+}
+
+.card-filter {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  @include mixin.breakpoint(desktop) {
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;   
+    gap: 2rem;
+  }
+}
+
+.quiz-filtered {
+  display: none;
+}
+
+.quiz-filtered--open {
+  transition: all 0.5s ease-in-out;
+  display: block;
+}
+
+.filter__btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: vars.$main-primary-color;
+  border: none;
+  border-radius: 1rem;
+  color: white;
+  padding: 0.5rem 1rem;
+  gap: 1rem;
+  margin-bottom: 1rem;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+.filter__btn:hover{
+  background-color: vars.$main-secondary-color;
+  transform: scale(1.05);
+}
+
+
+.card-category{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #fff;
+  border-radius: 1rem;
+  margin-bottom: 0.5rem;
+  height: 8rem;
+  width: 8rem;
+  text-transform: capitalize;
+}
+
+.card-level{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #fff;
+  border-radius: 1rem;
+  margin-bottom: 0.5rem;
+  height: 4rem;
+  width: 8rem;
+  gap: 0.5rem;
+  text-transform: capitalize;
 }
