--- a/src/components/Card/styles.scss
+++ b/src/components/Card/styles.scss
@@ -83,10 +83,19 @@
     align-items: center;
   }
 
-  &__favoris {
+  &__btn-favoris {
     background: none;
     border: none;
+    padding: 0.3rem 0.3rem 0rem 0.3rem;
+    border-radius: 50%;
+  }
+  &__btn-favoris:hover {
+    cursor: pointer;
+    background-color: rgba(255, 0, 0, 0.1);
   }
 }
+
+
+
 
 
