--- a/src/pages/Profil/styles.scss
+++ b/src/pages/Profil/styles.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   justify-content: start;
   align-items: center;
-  height: 70vh;
+  
 
   &__title{
     font-size: 1.5rem;
@@ -25,11 +25,12 @@
     justify-content: center;
     align-items: center; 
     gap: 2px;
+    padding: 1rem;
 
     @include mixin.breakpoint(desktop) {
       width: 80%;
 
-    }
+    } 
   }
 
   &__update {
@@ -89,7 +90,8 @@
     margin-top: 1rem;
     border-radius: 8px;
     cursor: pointer;
-    transition: 0.5s;   
+    transition: 0.5s;
+    flex-shrink: 0;   
 
     &__logout{ 
       background-color: vars.$main-primary-color;
@@ -111,5 +113,5 @@
 }
 
 .profil__button__delete {
-  margin-top: 5rem;
+  margin-top: 2rem;
 }
