--- a/src/pages/Profil-History/styles.scss
+++ b/src/pages/Profil-History/styles.scss
@@ -1,3 +1,11 @@
 @use '../../styles/mixin';
 @use '../../styles/vars';
 
+.quiz__title {
+  font-size: 1.5rem;
+  font-weight: 500;
+  padding-top: 1rem;
+  margin-bottom: 1rem;
+  color: vars.$primary-dark-color;
+  text-align: center;
+}
